<resources>
    <string name="app_name">CarrinhoCerto</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_transform">Transform</string>
    <string name="menu_reflow">Reflow</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_listas">Listas</string>
    <string name="menu_perfil">Perfil</string>
    <string name="listas_editarListas">Editar Listas</string>
    <string name="listas_criarListas">Criar Listas</string>
    <string name="listas_checkoutListas">Checkout</string>
    <string name="menu_historico">Histórico</string>

    <string-array name="categoria">
        <item>Selecione uma Categoria</item>
        <item>Higiene Pessoal</item>
        <item>Limpeza</item>
        <item>Mercearia</item>
        <item>Verduras e Frutas</item>

    </string-array>

    <string-array name="unidadeMedida">
        <item>Selecione uma Unidade de medida</item>
        <item>un</item>
        <item>kg</item>
        <item>g</item>
        <item>L</item>
        <item>ml</item>
        <item>pct</item>
        <item>cx</item>
        <item>dz</item>

    </string-array>


    <string name="lorem_ipsum_title">Lorem Ipsum"</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply placeholder text of the printing and
        typesetting industry. Lorem Ipsum has been the industry\'s standard placeholder text ever
        since the 1500s, when an unknown printer took a galley of type and scrambled it to make a
        type specimen book"
    </string>
    <string name="fab_content_description">Represents a view to invoke an action</string>
    <string name="image_view_item_transform_content_description">Represents an image view in the
        item
    </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>